Yeni katmanlar eklendi, product entitysi oluşturuldu, entityframeworkcore kuruldu ve dbcontext oluşturuldu

--- a/SkinetECommerce.WebAPI/appsettings.Development.json
+++ b/SkinetECommerce.WebAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=127.0.0.1;Port=5433;Database=SkinetCommerceDb;User Id=root;Password=12345;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
