--- a/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
+++ b/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <ProjectReference Include="..\SkinetECommerce.DataAccess\SkinetECommerce.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
