using öğeleri global olarak tanımlandı, klasör isimlendirmesi yapıldı

--- a/SkinetECommerce.WebAPI/appsettings.Development.json
+++ b/SkinetECommerce.WebAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=127.0.0.1;Port=5433;Database=SkinetCommerceDb;User Id=root;Password=12345;"
+    "DefaultConnection":"Server=127.0.0.1;Port=5433;Database=SkinetCommerceDb;User Id=postgres;Password=12345;"
   },
   "Logging": {
     "LogLevel": {
