Business katmanı oluşturuldu, Autofac implementasyonu yapıldı, result yapısı oluşturuldu

--- a/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
+++ b/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Autofac" Version="6.5.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0-rc.2.22476.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
           <PrivateAssets>all</PrivateAssets>
@@ -16,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SkinetECommerce.Business\SkinetECommerce.Business.csproj" />
       <ProjectReference Include="..\SkinetECommerce.DataAccess\SkinetECommerce.DataAccess.csproj" />
     </ItemGroup>
 
