--- a/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
+++ b/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Autofac" Version="6.5.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0-rc.2.22476.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
           <PrivateAssets>all</PrivateAssets>
