--- a/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
+++ b/SkinetECommerce.WebAPI/SkinetECommerce.WebAPI.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\SkinetECommerce.DataAccess\SkinetECommerce.DataAccess.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot" />
+    </ItemGroup>
+
 </Project>
